# dielectric

./: .gitignore  AGENT_CONTEXT_WINDOWS_AND_GEOMETRY.md  AGENT_TASK_ASSIGNMENTS.md  ARCHITECTURE.md  COMPLETE_OVERHAUL.md  COMPLEX_PCB_PROMPTS.md  DIELECTRIC_DIFFERENTIATION.md  ENHANCED_XAI_INTEGRATION.md  ENTERPRISE_AI_TRACK.md  FINAL_SUMMARY.md  FRONTEND_UPDATE.md  HACKPRINCETON_PITCH.md  HACKPRINCETON_READY.md  HOW_TO_RUN.md  HOW_TO_TEST_AND_RUN.md  HOW_TO_USE_SMART_PCB.md  HRM_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INDUSTRY_SCALE_SETUP.md  INTEGRATION_COMPLETE.md  INTERPRETING_RESULTS.md  JUDGES_PITCH.md  KICAD_INTEGRATION_COMPLETE.md  KICAD_INTEGRATION_SUMMARY.md  KICAD_MCP_SETUP.md  LARGE_COMPONENT_PROMPTS.md  MANIFEST.in  MULTI_AGENT_EXPLANATION.md  NATURAL_LANGUAGE_PROMPTS.md  NP_HARD_EXPLANATION.md  PRODUCTION_IMPLEMENTATION.md  QUICKSTART.md  QUICK_FIXES.md  QUICK_REFERENCE.md  QUICK_START.md  QUICK_START_DIELECTRIC.md  README.md  README_COMPLETE.md  RENAME_SUMMARY.md  (+34 more)
neuro-geometric-placer/: .dedalus.yaml  2_MINUTE_PITCH.md  2_MINUTE_PRESENTATION_GUIDELINE.md  ADVANCED_FEATURES.md  AI_AGENTS_EXPLANATION.md  ALL_FIXED.md  ARCHITECTURE_COMPLETE.md  BIGGEST_BOTTLENECK.md  COMPETITIVE_ANALYSIS.md  COMPLETE_FIXES_SUMMARY.md  COMPLETE_SOLUTION.md  COMPUTATIONAL_GEOMETRY_EXPLANATION.md  COMPUTATIONAL_GEOMETRY_TECHNICAL_BLURB.md  DEDALUS_DEPLOYMENT_STEPS.md  DEDALUS_INTEGRATION.md  DEDALUS_SETUP.md  Dockerfile  EXPLANATION.md  IMPROVEMENTS_SUMMARY.md  KICAD_MCP_INTEGRATION.md  LARGE_PCB_COMPUTATIONAL_GEOMETRY.md  MAKING_IT_THE_BEST.md  PCB_ENGINEER_WORKFLOW.md  QUICK_REFERENCE.md  QUICK_START.md  QUICK_TEST.md  README.md  SCALING_TO_100S_COMPONENTS.md  WORKFLOW_AUTOMATION.md  demo_workflow.sh  deploy_anywhere.sh  deploy_simple.py  main.py  pyproject.toml  requirements.txt  run_complete_system.sh  run_demo.sh  setup.py  setup.sh  test_ai_agents.sh  (+3 more)
neuro-geometric-placer/data/: pcb_database.json
neuro-geometric-placer/examples/: complex_pcb_example.json  large_designs.json  simple_board.json  template_design.json
neuro-geometric-placer/frontend/: app.py  app_clean.py  app_dielectric.py
neuro-geometric-placer/mcp_servers/: kicad-exporter_wrapper.py  placement-scorer_wrapper.py  thermal-simulator_wrapper.py
neuro-geometric-placer/tests/: test_pipeline.py
src/: main.py
(+233 files in other folders)
