[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dielectric"
version = "0.1.0"
description = "AI-powered PCB component placement optimization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "dedalus-labs>=0.0.1",
    "openmcp @ git+https://github.com/dedalus-labs/openmcp-python.git",
    "numpy>=1.24.0",
    "shapely>=2.0.0",
    "scipy>=1.11.0",
    "streamlit>=1.28.0",
    "matplotlib>=3.7.0",
    "opencv-python>=4.8.0",
    "plotly>=5.17.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "websockets>=12.0",
    "aiofiles>=23.2.0",
    "python-multipart>=0.0.6",
]

[project.scripts]
ngp = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
