[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro-geometric-placer"
version = "1.0.0"
description = "AI-Powered PCB Component Placement System"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "numpy>=1.24.0",
    "shapely>=2.0.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "opencv-python>=4.8.0",
    "streamlit>=1.28.0",
    "aiofiles>=23.2.1",
    "websockets>=12.0",
    "sqlalchemy>=2.0.0",
    "plotly>=5.17.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "dedalus-labs>=0.1.0",
    "mcp>=1.21.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=1.6.1",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
ngp-server = "backend.mcp_servers.ngp_server:main"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md"]
